Updated My Bookmarks

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
       <div class="category">
         <div class="bookmarks">
           <h>Work</h>
-          <li><a href="https://gmail.com">Gmail</a></li>
-          <li><a href="<link>">School</a></li>
-          <li><a href="https://zoom.us/join">Zoom</a></li>
-          <li><a href="https://linkedin.com">Linkedin</a></li>
+          <li><a href="https://twitter.com/">Twitter</a></li>
+          <li><a href="https://reddit.com/">Reddit</a></li>
+          <li><a href="https://ogu.gg/">OGU</a></li>
+          <li><a href="https://YouTUbe.com/">YouTube</a></li>
         </div>
       </div>
 
@@ -30,28 +30,28 @@
         <div class="bookmarks">
           <h>Dev</h>
           <li><a href="https://github.com/">GitHub</a></li>
-          <li><a href="<link>">Internship</a></li>
-          <li><a href="https://devpost.com/">DevPost</a></li>
-          <li><a href="https://discord.com/developers/applications">Devportal</a></li>
+          <li><a href="https://github.com/topics/osint/">GitHub - OSINT</a></li>
+          <li><a href="https://duckduckgo.com/?q=site%3Apastehub.net">Google Dorking</a></li>
+          <li><a href="https://proton.me/">ProtonMail</a></li>
         </div>
       </div>
 
       <div class="category">
         <div class="bookmarks">
           <h>Social</h>
-          <li><a href="https://reddit.com/">Reddit</a></li>
-          <li><a href="https://instagram.com/">Instagram</a></li>
-          <li><a href="https://twitter.com/">Twitter</a></li>
-          <li><a href="https://discord.com/channels/@me">Discord</a></li>
+          <li><a href="https://snusbase.com"/>Snusbase</a></li>
+          <li><a href="https://leakcheck.net/">Leakcheck</a></li>
+          <li><a href="https://checkleaked.cc/">CheckLeaked</a></li>
+          <li><a href="https://epieos.com/">Epieos</a></li>
         </div>
       </div>
 
       <div class="category">
         <div class="bookmarks">
           <h>Media</h>
-          <li><a href="https://youtube.com/">YouTube</a></li>
-          <li><a href="https://primevideo.com/">Prime Video</a></li>
-          <li><a href="https://twitch.tv/">Twitch</a></li>
+          <li><a href="https://hulu.com/">Hulu</a></li>
+          <li><a href="https://play.hbomax.com/">HBO Max</a></li>
+          <li><a href="https://www.disneyplus.com/">Disney+</a></li>
           <li><a href="https://netflix.com/">Netflix</a></li>
         </div>
       </div>
