--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="bookmark">
       <div class="category">
         <div class="bookmarks">
-          <h>Work</h>
+          <h>Daily</h>
           <li><a href="https://twitter.com/">Twitter</a></li>
           <li><a href="https://reddit.com/">Reddit</a></li>
           <li><a href="https://ogu.gg/">OGU</a></li>
@@ -28,7 +28,7 @@
 
       <div class="category">
         <div class="bookmarks">
-          <h>Dev</h>
+          <h>Bored</h>
           <li><a href="https://github.com/">GitHub</a></li>
           <li><a href="https://github.com/topics/osint/">GitHub - OSINT</a></li>
           <li><a href="https://duckduckgo.com/?q=site%3Apastehub.net">Google Dorking</a></li>
@@ -38,7 +38,7 @@
 
       <div class="category">
         <div class="bookmarks">
-          <h>Social</h>
+          <h>Working</h>
           <li><a href="https://snusbase.com"/>Snusbase</a></li>
           <li><a href="https://leakcheck.net/">Leakcheck</a></li>
           <li><a href="https://checkleaked.cc/">CheckLeaked</a></li>
